--- a/02_python_03/homework_02_03.ipynb
+++ b/02_python_03/homework_02_03.ipynb
@@ -2,10 +2,301 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[13, 25, 23, 34], [45, 32, 44, 47], [12, 33, 23, 95], [13, 53, 34, 35]]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [13, 25, 23, 34],\n",
+    "    [45, 32, 44, 47],\n",
+    "    [12, 33, 23, 95],\n",
+    "    [13, 53, 34, 35],\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum_diag(matrix):\n",
+    "    s = 0\n",
+    "    for i in range(0,len(matrix[0])):\n",
+    "        s += matrix[i][i];\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "103\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum_diag(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = [1, '5', 'abc', 20, '2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_sq(vector):\n",
+    "    return [int(x)**2 for x in data2 if str(x).isdigit()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 25, 400, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum_sq(data2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exchange import Rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_val_name(valutes):\n",
+    "    max_val = max([x['Value'] for x in valutes.values()])\n",
+    "    val = [x for x in valutes.values() if x['Value']==max_val]\n",
+    "    return val[0]['Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Китайских юаней'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valutes = Rate().exchange_rates()\n",
+    "max_val_name(valutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Евро'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Rate(format='name').make_format('EUR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.3916"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Rate(format='value').make_format('EUR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17479999999999052"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Rate(format='value',diff=True).make_format('EUR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib(n):\n",
+    "    if n==1 or n==2:\n",
+    "        return 1\n",
+    "    return fib(n-1) + fib(n-2)\n",
+    "\n",
+    "fib(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 1\n",
+      "2 : 1\n",
+      "3 : 2\n",
+      "4 : 3\n",
+      "5 : 5\n",
+      "6 : 8\n",
+      "7 : 13\n",
+      "8 : 21\n",
+      "9 : 34\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    print(i,\":\",fib(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = ['2018-01-01', 'yandex', 'cpc', 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_dict(p_list):\n",
+    "    # длина списка\n",
+    "    l = len(p_list) \n",
+    "    \n",
+    "    # левая граница окна\n",
+    "    b1 = -l\n",
+    "    \n",
+    "    # правая граница окна\n",
+    "    b2 = -l+1 \n",
+    "    \n",
+    "    if (l == 2): \n",
+    "        # если остался список из 2-х элементов, то формируем из него словарь и выходим из рекурсии\n",
+    "        return {p_list[b1]:p_list[b2]}\n",
+    "    else:\n",
+    "        # если элементов больше 2, то из левой границы окна делаем ключ, а все, что дальше правой границы,\n",
+    "        # превращаем в новый список (уменьшенный на один элемент) и отправляем в рекусию\n",
+    "        return {p_list[b1]:make_dict(p_list[b2:])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2018-01-01': {'yandex': {'cpc': 100}}}"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_dict(l)"
+   ]
   }
  ],
  "metadata": {
